made notif user and modify payment
