# controllers/paymentController.js
@@ -15,6 +15,7 @@ const createTransaction = async (req, res, next) => {
       },
       include: ["Category"],
     });
+
     if (!course) {
       throw new ApiError("Course not found!", 404);
     }
@@ -26,12 +27,7 @@ const createTransaction = async (req, res, next) => {
       totalPrice = course.price;
     }
 
-    const createPayment = await Payment.create({
-      orderId: `ORDER-${course.classCode}-${req.user.id}-${Date.now()}`,
-      userId: req.user.id,
-      courseId,
-      price: totalPrice,
-    });
+    const orderId = `ORDER-${course.classCode}-${req.user.id}-${Date.now()}`;
 
     const snap = new midtransClient.Snap({
       isProduction: false,
@@ -41,8 +37,8 @@ const createTransaction = async (req, res, next) => {
 
     const transaction = await snap.createTransaction({
       transaction_details: {
-        order_id: createPayment.orderId,
-        gross_amount: createPayment.price,
+        order_id: orderId,
+        gross_amount: totalPrice,
       },
       customer_details: {
         first_name: req.user.name,
@@ -51,24 +47,27 @@ const createTransaction = async (req, res, next) => {
       },
       item_details: {
         id: course.id,
-        price: createPayment.price,
+        price: course.price,
         name: course.name,
         category: course.Category.name,
         quantity: 1,
       },
     });
 
-    const paymentTransaction = {
-      ...createPayment.toJSON(),
+    const createPayment = await Payment.create({
+      orderId,
+      userId: req.user.id,
+      courseId,
+      price: totalPrice,
       token: transaction.token,
       redirect_url: transaction.redirect_url,
-    };
+    });
 
     res.status(201).json({
       status: "success",
       message: "Transaksi dibuat!",
       data: {
-        createPayment: paymentTransaction,
+        createPayment,
       },
     });
   } catch (error) {
@@ -89,6 +88,7 @@ const paymentCallback = async (req, res, next) => {
     transaction_time,
     payment_type,
   } = req.body;
+
   try {
     const serverKey = process.env.MIDTRANS_SERVER_KEY;
     const hashed = crypto
@@ -97,13 +97,12 @@ const paymentCallback = async (req, res, next) => {
       .digest("hex");
 
     if (hashed === signature_key) {
+      const payment = await Payment.findOne({
+        where: { orderId: order_id },
+      });
+      if (!payment) throw new ApiError("Transaksi tidak ada", 404);
       if (transaction_status === "capture") {
         if (fraud_status === "accept") {
-          const payment = await Payment.findOne({
-            where: { orderId: order_id },
-          });
-          if (!payment) throw new ApiError("Transaksi tidak ada", 404);
-
           payment.status = "paid";
           payment.settlementTime = transaction_time;
           payment.paymentType = payment_type;
@@ -116,11 +115,11 @@ const paymentCallback = async (req, res, next) => {
           });
 
           if (findUserCourse) {
-            await UserCourse.update({
+            await findUserCourse.update({
               isAccessible: true,
             });
           } else {
-            await UserCourse.create({
+            await findUserCourse.create({
               userId: payment.userId,
               courseId: payment.courseId,
               isAccessible: true,
@@ -128,9 +127,6 @@ const paymentCallback = async (req, res, next) => {
           }
         }
       } else if (transaction_status === "settlement") {
-        const payment = await Payment.findOne({ where: { orderId: order_id } });
-        if (!payment) throw new ApiError("Transaksi tidak ada", 404);
-
         payment.status = "paid";
         payment.settlementTime = settlement_time;
         payment.paymentType = payment_type;
@@ -143,16 +139,21 @@ const paymentCallback = async (req, res, next) => {
         });
 
         if (findUserCourse) {
-          await UserCourse.update({
+          await findUserCourse.update({
             isAccessible: true,
           });
         } else {
-          await UserCourse.create({
+          await findUserCourse.create({
             userId: payment.userId,
             courseId: payment.courseId,
             isAccessible: true,
           });
         }
+      } else if (transaction_status === "expire") {
+        payment.status = "expire";
+        payment.settlementTime = transaction_time;
+        payment.paymentType = payment_type;
+        await payment.save();
       }
     }
 
@@ -288,6 +289,7 @@ const paymentHistory = async (req, res, next) => {
             "id",
             "name",
             "imageUrl",
+            "categoryId",
             "price",
             "promoPercentage",
             "level",
@@ -323,7 +325,8 @@ const paymentHistory = async (req, res, next) => {
         rating: payment.Course.rating,
       },
       price: payment.price,
-      createdAt: payment.createdAt,
+      status: payment.status,
+      createdAt: payment.createdAt.toISOString(),
     }));
 
     res.status(200).json({
@@ -338,6 +341,27 @@ const paymentHistory = async (req, res, next) => {
   }
 };
 
+const deletePayment = async (req, res, next) => {
+  try {
+    const { courseId } = req.params;
+    const userId = req.user.id;
+    const dataPayment = await Payment.findOne({
+      where: {
+        userId,
+        courseId,
+      },
+    });
+
+    if (!dataPayment) {
+      throw new ApiError("Riwayat pembayaran tidak ditemukan!", 404);
+    }
+
+    await dataPayment.destroy();
+  } catch (error) {
+    next(error);
+  }
+};
+
 module.exports = {
   createTransaction,
   paymentCallback,
@@ -345,4 +369,5 @@ module.exports = {
   getAllPayment,
   createTransactionv2,
   paymentHistory,
+  deletePayment,
 };
