# doc/swagger.json
@@ -4228,6 +4228,96 @@
             }
           }
         }
+      },
+      "delete": {
+        "tags": ["Payment"],
+        "security": [
+          {
+            "bearerToken": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "example": 3
+            },
+            "description": "ID of the payment to retrieve"
+          }
+        ],
+        "summary": "Delete Payment By ID",
+        "description": "Ini adalah API endpoint untuk menghapus data payment",
+        "responses": {
+          "200": {
+            "description": "Delete a payment by ID",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "description": "Status of the request",
+                      "type": "string",
+                      "example": "success"
+                    },
+                    "message": {
+                      "description": "Message of the request",
+                      "type": "string",
+                      "example": "Payment deleted"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "4xx": {
+            "description": "Failed Delete Payment Data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "description": "Status of the request",
+                      "example": "failed"
+                    },
+                    "message": {
+                      "type": "string",
+                      "description": "Message of the request",
+                      "example": "Payment not found"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "5xx": {
+            "description": "Error Delete Payment Data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "description": "Status of the request",
+                      "example": "error"
+                    },
+                    "message": {
+                      "type": "string",
+                      "description": "Message of the request",
+                      "example": "Error occured during get payment data"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/api/v1/payment/history": {
@@ -4496,6 +4586,15 @@
               "example": "in_progress"
             },
             "description": "Option: in_progress atau selesai"
+          },
+          {
+            "name": "search",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "example": "Course 2"
+            },
+            "description": "search by course name"
           }
         ],
         "summary": "Get all user course and progress",
@@ -5495,6 +5594,127 @@
                       "type": "string",
                       "description": "Message of the request",
                       "example": "Error occured during get notification data"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/my-notification/{id}": {
+      "get": {
+        "get": {
+          "tags": ["Notification"],
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "required": true,
+              "schema": {
+                "type": "integer",
+                "example": 1
+              },
+              "description": "ID of the Notification to retrieve"
+            }
+          ],
+          "summary": "Get Notification For User",
+          "description": "Ini adalah API endpoint untuk mengirim notifikasi ke User",
+          "responses": {
+            "200": {
+              "description": "Notification fetched successfully",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "status": {
+                        "description": "Status of the request",
+                        "type": "string",
+                        "example": "success"
+                      },
+                      "message": {
+                        "description": "Message of the request",
+                        "type": "string",
+                        "example": "Sukses mengirim notifikasi"
+                      },
+                      "data": {
+                        "description": "Notification data",
+                        "type": "object",
+                        "properties": {
+                          "notif": {
+                            "id": {
+                              "type": "integer",
+                              "example": 1
+                            },
+                            "category": {
+                              "type": "string",
+                              "example": "Notifikasi"
+                            },
+                            "title": {
+                              "type": "string",
+                              "example": "Password berhasil diubah"
+                            },
+                            "description": {
+                              "type": "string",
+                              "example": "Password anda berhasil diubah ke password baru, harap diingat!"
+                            },
+                            "createdAt": {
+                              "type": "string",
+                              "format": "date-time"
+                            },
+                            "updatedAt": {
+                              "type": "string",
+                              "format": "date-time"
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "4xx": {
+              "description": "Failed Get Notification Data",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "status": {
+                        "type": "string",
+                        "description": "Status of the request",
+                        "example": "failed"
+                      },
+                      "message": {
+                        "type": "string",
+                        "description": "Message of the request",
+                        "example": "Notification 1 not found"
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "5xx": {
+              "description": "Error Get Notification Data",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "status": {
+                        "type": "string",
+                        "description": "Status of the request",
+                        "example": "error"
+                      },
+                      "message": {
+                        "type": "string",
+                        "description": "Message of the request",
+                        "example": "Error occured during get notification data"
+                      }
                     }
                   }
                 }
