# routes/paymentRouter.js
@@ -11,6 +11,7 @@ router.post(
   paymentController.createTransaction
 );
 router.get("/history", authenticate, paymentController.paymentHistory);
+router.get("/delete/:courseId", authenticate, paymentController.deletePayment);
 router.post("/v2", authenticate, paymentController.createTransactionv2);
 router.get("/", authenticate, paymentController.getAllPayment);
 router.post("/payment-callback", paymentController.paymentCallback);
